--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -2,74 +2,165 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
 </head>
 <body>
-<h2>
-    All Users
-</h2>
-<br>
-<table cellspacing="3" bgcolor="#000000">
-    <thead>
-    <tr bgcolor="#ffffff">
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Department</th>
-        <th>Salary</th>
-        <th>Password</th>
-        <th>Roles</th>
-        <th>Operation</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr bgcolor="#ffffff" th:each="user : ${allUsers}">
-        <td th:text="${user.getUsername()}"></td>
-        <td th:text="${user.getUsersurname()}"></td>
-        <td th:text="${user.getDepartment()}"></td>
-        <td th:text="${user.getSalary()}"></td>
-        <td th:text="${user.getPassword()}"></td>
-        <td th:text="${user.getAuthorities()}"></td>
-        <td>
-            <table>
-                <tr>
-                    <td>
-                        <form th:method="GET" th:action="@{/admin/edit}" th:object="${user}">
-                            <input type="submit" value="Edit"/>
-                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                        </form>
-                    </td>
-                    <td>
-                        <form th:method="POST" th:action="@{/admin/delete}" th:object="${user}">
-                            <input type="submit" value="Delete"/>
-                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                        </form>
-                    </td>
-                    <td>
-                        <form th:method="GET" th:action="@{/user}" th:object="${user}">
-                            <input type="submit" value="Profile"/>
-                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                        </form>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<br>
-<table>
-    <tr>
-        <td>
-            <form th:method="GET" th:action="@{admin/addNewUser}">
-                <input type="submit" value="Add"/>
-            </form>
-        </td>
-        <td>
-            <form th:method="GET" th:action="@{/logout}">
-                <input type="submit" value="Exit"/>
-            </form>
-        </td>
-    </tr>
-</table>
+<nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white ">
+            <span style="font-weight: bold" th:text="${allUsers.get(2).getUsername()}"></span>
+            <span>with roles:</span>
+            <span th:each="role : ${allUsers.get(2).getRoles()}">
+            <span th:text="${role.getName().substring(5)} "></span>
+            </span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link text-secondary" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--Контейнер для содержимого страницы-->
+<div class="container-fluid">
+    <div class="row">
+        <!-- Боковая панель -->
+        <div class="col-2 sidebar">
+            <div class="list-group">
+                <!-- Ссылки -->
+                <a href="admin"
+                   class="list-group-item list-group-item-action border-0 text-primary fw-bold text-light active">Admin</a>
+                <a href="user" class="list-group-item list-group-item-action border-0 text-primary fw-bold">User</a>
+            </div>
+        </div>
+        <!--Админ панель-->
+        <div class="col-10">
+            <!--Контейнер для наименование панели-->
+            <div class="container-fluid">
+                <h1>
+                    Admin panel
+                </h1>
+            </div>
+            <!--Горизонтальные вкладки-->
+            <div class="container">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="users-table-tab" data-bs-toggle="tab" data-bs-target="#users-table" type="button" role="tab" aria-controls="users-table" aria-selected="true">Users table</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="new-user-tab" data-bs-toggle="tab" data-bs-target="#new-user" type="button" role="tab" aria-controls="new-user" aria-selected="false">New User</button>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="users-table" role="tabpanel" aria-labelledby="users-table-tab">
+                    <!--Таблица с пользователями-->
+                    <table class="table table-striped">
+                        <tbody>
+                        <tr>
+                            <td class="container-fluid">
+                                <h4>
+                                    All Users
+                                </h4>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="container-fluid">
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th class="col" scope="col">Name</th>
+                                        <th class="col" scope="col">Surname</th>
+                                        <th class="col" scope="col">Department</th>
+                                        <th class="col" scope="col">Salary</th>
+                                        <th class="col" scope="col">Password</th>
+                                        <th class="col" scope="col">Roles</th>
+                                        <th class="col" scope="col">Operation</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user : ${allUsers}">
+                                        <td class="col" th:text="${user.getUsername()}"></td>
+                                        <td class="col" th:text="${user.getUsersurname()}"></td>
+                                        <td class="col" th:text="${user.getDepartment()}"></td>
+                                        <td class="col" th:text="${user.getSalary()}"></td>
+                                        <td class="col" th:text="${user.getPassword()}"></td>
+                                        <td class="col align-top">
+                                            <!-- Выравнивание по верхнему краю -->
+                                            <span th:each="role : ${user.getRoles()}">
+                                        <span th:text="${role.getName().substring(5)}"></span>
+                                    </span>
+                                        </td>
+                                        <td>
+                                            <table>
+                                                <tr>
+                                                    <td>
+                                                        <form th:method="GET" th:action="@{/admin/edit}" th:object="${user}">
+                                                            <input type="submit" value="Edit"/>
+                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
+                                                        </form>
+                                                    </td>
+                                                    <td>
+                                                        <form th:method="POST" th:action="@{/admin/delete}" th:object="${user}">
+                                                            <input type="submit" value="Delete"/>
+                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
+                                                        </form>
+                                                    </td>
+                                                    <td>
+                                                        <form th:method="GET" th:action="@{/user}" th:object="${user}">
+                                                            <input type="submit" value="Profile"/>
+                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
+                                                        </form>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <form th:method="GET" th:action="@{admin/addNewUser}">
+                                                <input type="submit" value="Add"/>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form th:method="GET" th:action="@{/logout}">
+                                                <input type="submit" value="Exit"/>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="new-user" role="tabpanel" aria-labelledby="new-user-tab">
+                    <div th:include="user-info :: user-info"></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
