--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Admin Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           crossorigin="anonymous">
@@ -87,7 +87,8 @@
                                         <th class="col" scope="col">Salary</th>
                                         <th class="col" scope="col">Password</th>
                                         <th class="col" scope="col">Roles</th>
-                                        <th class="col" scope="col">Operation</th>
+                                        <th class="col" scope="col">Edit</th>
+                                        <th class="col" scope="col">Delete</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -104,45 +105,19 @@
                                     </span>
                                         </td>
                                         <td>
-                                            <table>
-                                                <tr>
-                                                    <td>
-                                                        <form th:method="GET" th:action="@{/admin/edit}" th:object="${user}">
-                                                            <input type="submit" value="Edit"/>
-                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                                                        </form>
-                                                    </td>
-                                                    <td>
-                                                        <form th:method="POST" th:action="@{/admin/delete}" th:object="${user}">
-                                                            <input type="submit" value="Delete"/>
-                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                                                        </form>
-                                                    </td>
-                                                    <td>
-                                                        <form th:method="GET" th:action="@{/user}" th:object="${user}">
-                                                            <input type="submit" value="Profile"/>
-                                                            <input type="hidden" name="id" th:value="${user.getId()}"/>
-                                                        </form>
-                                                    </td>
-                                                </tr>
-                                            </table>
+                                            <form th:method="GET" th:action="@{/admin/edit}" th:object="${user}">
+                                                <input type="submit" value="Edit"/>
+                                                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form th:method="POST" th:action="@{/admin/delete}" th:object="${user}">
+                                                <input type="submit" value="Delete"/>
+                                                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                                            </form>
                                         </td>
                                     </tr>
                                     </tbody>
-                                </table>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <form th:method="GET" th:action="@{admin/addNewUser}">
-                                                <input type="submit" value="Add"/>
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form th:method="GET" th:action="@{/logout}">
-                                                <input type="submit" value="Exit"/>
-                                            </form>
-                                        </td>
-                                    </tr>
                                 </table>
                             </td>
                         </tr>
