--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -2,29 +2,115 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>User Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
+    <style>
+        html, body {
+            height: 100%;
+        }
+        .full-height {
+            height: 100%;
+        }
+    </style>
 </head>
-<body>
-<h2>
-    User Profile
-</h2>
-<br>
-<form th:method="POST" th:action="@{/user}" th:object="${user}">
-    <label for="name">Username: </label>
-    <td th:text="${user.getUsername()}" id="name"><td/>
-    <br/><br/>
-    <label for="surname">Usersurname: </label>
-    <td th:text="${user.getUsersurname()}" id="surname"><td/>
-    <br/><br/>
-    <label for="department">Department: </label>
-    <td th:text="${user.getDepartment()}" id="department"><td/>
-    <br/><br/>
-    <label for="salary">Salary: </label>
-    <td th:text="${user.getSalary()}" id="salary"><td/>
-    <br/><br/>
-</form>
-<form th:method="GET" th:action="@{/logout}">
-    <input type="submit" value="Exit"/>
-</form>
+<body class="d-flex flex-column">
+<nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white ">
+            <span style="font-weight: bold" th:text="${user.getUsername()}"></span>
+            <span>with roles:</span>
+            <span th:each="role : ${user.getRoles()}">
+            <span th:text="${role.getName().substring(5)} "></span>
+            </span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link text-secondary" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--Контейнер для содержимого страницы-->
+<div class="container-fluid flex-grow-1">
+    <div class="row h-100">
+        <!-- Боковая панель -->
+        <div class="col-2 sidebar bg-white full-height">
+            <div class="list-group">
+                <!-- Ссылки -->
+                <a href="user"
+                   class="list-group-item list-group-item-action border-0 text-primary fw-bold text-light active">User</a>
+            </div>
+        </div>
+
+        <!--Админ панель-->
+        <div class="col-10 bg-secondary bg-light full-height"  >
+            <!--Контейнер для наименование панели-->
+            <div class="container-fluid">
+                <h1 class="pt-3 pb-3">
+                    User information-page
+                </h1>
+                <div class="col-md-auto">
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="users-table" role="tabpanel" aria-labelledby="users-table-tab">
+                            <!--Таблица данных пользователя-->
+                            <table class="table table-bordered table-striped">
+                                <tbody>
+                                <tr>
+                                    <td class="container-fluid">
+                                        <h6 class="pt-2">
+                                            About user
+                                        </h6>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="container-fluid">
+                                        <table class="table table-striped">
+                                            <thead>
+                                            <tr>
+                                                <th class="col" scope="col">Name</th>
+                                                <th class="col" scope="col">Surname</th>
+                                                <th class="col" scope="col">Department</th>
+                                                <th class="col" scope="col">Salary</th>
+                                                <th class="col" scope="col">Password</th>
+                                                <th class="col" scope="col">Roles</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr th:object="${user}">
+                                                <td class="col" th:text="${user.getUsername()}"></td>
+                                                <td class="col" th:text="${user.getUsersurname()}"></td>
+                                                <td class="col" th:text="${user.getDepartment()}"></td>
+                                                <td class="col" th:text="${user.getSalary()}"></td>
+                                                <td class="col" th:text="${user.getPassword()}"></td>
+                                                <td class="col align-top">
+                                                    <!-- Выравнивание по верхнему краю -->
+                                                    <span th:each="role : ${user.getRoles()}">
+                                                    <span th:text="${role.getName().substring(5)}"></span>
+                                                    </span>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
