--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -23,11 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand text-white ">
-                <span style="font-weight: bold" th:text="${user.getUsername()}"></span>
-                <span>with roles:</span>
-                <span th:each="role : ${user.getRoles()}">
-                <span th:text="${role.getName().substring(5)} "></span>
-                </span>
+                <span id="currentUserNavbar"></span>
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
@@ -92,20 +88,8 @@
                                                         <th class="col" scope="col">Roles</th>
                                                     </tr>
                                                     </thead>
-                                                    <tbody>
-                                                    <tr th:object="${user}">
-                                                        <td class="col" th:text="${user.getUsername()}"></td>
-                                                        <td class="col" th:text="${user.getUsersurname()}"></td>
-                                                        <td class="col" th:text="${user.getDepartment()}"></td>
-                                                        <td class="col" th:text="${user.getSalary()}"></td>
-                                                        <td class="col" th:text="${user.getPassword()}"></td>
-                                                        <td class="col align-top">
-                                                            <!-- Выравнивание по верхнему краю -->
-                                                            <span th:each="role : ${user.getRoles()}">
-                                                            <span th:text="${role.getName().substring(5)}"></span>
-                                                            </span>
-                                                        </td>
-                                                    </tr>
+                                                    <tbody id="currentUserTable">
+
                                                     </tbody>
                                                 </table>
                                             </td>
@@ -121,6 +105,7 @@
 
         </div>
     </div>
+    <script src="/static/user-profile.js"></script>
 
 </body>
 </html>
