fix problem editUser

--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -307,7 +307,8 @@
                                                         <select class="custom-select form-control" id="rolesNew"
                                                                 name="roles"
                                                                 multiple
-                                                                size="2">
+                                                                size="2"
+                                                                required>
                                                             <option value="ROLE_USER">USER</option>
                                                             <option value="ROLE_ADMIN">ADMIN</option>
                                                         </select>
