--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -135,6 +135,9 @@
                                                                         <input type="text" name="username"
                                                                                class="form-control" id="usernameEdit"
                                                                                data-user-id="username"/>
+                                                                        <span id="usernameEditError"
+                                                                              class="text-danger">
+                                                                        </span>
                                                                     </div>
                                                                     <div class="mb-2">
                                                                         <label for="usersurnameEdit"
@@ -142,6 +145,9 @@
                                                                         <input type="text" name="usersurname"
                                                                                class="form-control" id="usersurnameEdit"
                                                                                data-user-id="usersurname"/>
+                                                                        <span id="usersurnameEditError"
+                                                                              class="text-danger">
+                                                                        </span>
                                                                     </div>
                                                                     <div class="mb-2">
                                                                         <label for="departmentEdit"
@@ -149,6 +155,9 @@
                                                                         <input type="text" name="department"
                                                                                class="form-control" id="departmentEdit"
                                                                                data-user-id="department"/>
+                                                                        <span id="departmentEditError"
+                                                                              class="text-danger">
+                                                                        </span>
                                                                     </div>
                                                                     <div class="mb-2">
                                                                         <label for="salaryEdit"
@@ -156,6 +165,8 @@
                                                                         <input type="text" name="salary"
                                                                                class="form-control" id="salaryEdit"
                                                                                data-user-id="salary"/>
+                                                                        <span id="salaryEditError" class="text-danger">
+                                                                        </span>
                                                                     </div>
                                                                     <div class="mb-2">
                                                                         <label for="passwordEdit"
@@ -163,6 +174,9 @@
                                                                         <input type="text" name="password"
                                                                                class="form-control" id="passwordEdit"
                                                                                data-user-id="password"/>
+                                                                        <span id="passwordEditError"
+                                                                              class="text-danger">
+                                                                        </span>
                                                                     </div>
                                                                     <div class="mb-2">
                                                                         <label for="allRolesEdit"><b>Role</b></label>
@@ -289,7 +303,7 @@
                                                         <input type="text" name="username"
                                                                class="form-control" id="usernameNew"
                                                                placeholder="Username"/>
-                                                        <span id="usernameError">
+                                                        <span id="usernameError" class="text-danger">
                                                         </span>
                                                     </div>
                                                     <div class="mb-3">
